--- a/05HizalamaVeDisplay.html
+++ b/05HizalamaVeDisplay.html
@@ -47,6 +47,8 @@
     </blockquote>
 
     <br><br>
+
+    <!-- float varsa clearfix olmalı -->
     <div class="clearfix">
     <div class="bg-primary float-start" style="width:100px; height: 100px;"></div>
     <div class="bg-success float-end" style="width:100px; height: 100px;"></div>
@@ -54,7 +56,49 @@
     
     <div class="bg-danger" style="height:100px"></div>
 
+    <br><br>
+    <!-- d-inline ve d-block kavramları -->
+    <div class="d-inline bg-primary text-white p-3">d-inline</div>
+    <div class="d-inline bg-primary text-white p-3">d-inline bu şekilde</div>
 
+    <br><br>
+
+    <span class="d-block bg-primary text-white p-3">d-block</span>
+    <span class="d-block bg-primary text-white p-3">d-block bu şekilde</span>
+
+    <br><br>
+
+    <div class="bg-primary d-inline-block">
+        <h3>lorem ipsum</h3>
+        Lorem
+    </div>    
+
+    <div class="bg-primary d-inline-block">
+        <h3>lorem ipsum</h3>
+        Lorem        
+        
+    </div>
+
+    <!-- d-none ve invisible -->
+    <div class="d-none bg-warning">görünmez div</div>
+    <div class="invisible bg-warning">görünmez</div>
+
+    <!-- badge(alt satıra geçmez) ve text-wrap -->
+    <div class="badge bg-primary text-wrap" style="width:5rem;">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit.    
+    </div>
+
+    <div class="bg-primary text-nowrap" style="width:6rem;">
+        Lorem ipsum TAŞAR dolor sit, amet consectetur adipisicing elit.    
+    </div>
+
+    <!-- <p class="bg-success">
+        Lorem ipsum dolor sit amet. aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+    </p> -->
+
+    <p class="bg-success text-break">
+        Lorem ipsum dolor sit amet. aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+    </p>
 
 
 
