--- a/09FormEtiketleri.html
+++ b/09FormEtiketleri.html
@@ -19,11 +19,80 @@
         <label for="email" class="form-label">Email</label>
         <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email">
     </div>
-
     <div class="mb-3">
-        <label for="introl" class="form-label">Intro</label>
+        <label for="intro" class="form-label">Intro</label>
         <textarea name="intro" id="intro" class="form-control"></textarea>
     </div>
+    <div class="mb-3">
+      <label for="name" class="form-label">Name</label>
+      <input type="text" id="name" class="form-control form-control-sm" placeholder="Enter Name"></input>
+  </div>
+
+  <div class="mb-3">
+    <label for="name" class="form-label">Surname</label>
+    <input type="text" id="surname" class="form-control form-control-lg" placeholder="Enter Surname"></input>
+</div>
+
+<div class="mb-3">
+  <label for="name" class="form-label" >Readonly</label>
+  <input type="text" name="name" class="form-control" readonly>
+</div>
+
+<div class="mb-3">
+  <label for="surname" class="form-label">ReadOnly</label>
+  <input type="text" name="surname" class="form-control-plaintext" readonly>
+
+</div>
+
+<div class="mb-3">
+  <label for="cities" class="form-label">Cities</label>
+  <input type="text" name="surname" list="cityList" class="form-control" placeholder="Type...">
+  <datalist id="cityList">
+    <option value="Kocaeli"></option>
+    <option value="İstanbul"></option>
+    <option value="Ankara"></option>
+    <option value="Sivas"></option>
+    <option value="Samsun"></option>
+  </datalist>
+</div>
+
+<div class="mb-3">
+  <label for="cities" class="form-label">Cities</label>
+  <select class="form-select" >
+    <option value="41">Kocaeli</option>
+    <option value="34">İstanbul</option>
+    <option value="06">Ankara</option>
+    <option value="58">Sivas</option>
+    <option value="55">Samsun</option>
+  </select>
+</div>
+
+<div class="mb-3">
+  <label for="cities" class="form-label from-select-lg">Cities</label>
+  <select class="form-select" >
+    <option value="41">Kocaeli</option>
+    <option value="34">İstanbul</option>
+    <option value="06">Ankara</option>
+    <option value="58">Sivas</option>
+    <option value="55">Samsun</option>
+  </select>
+</div>
+
+
+<div class="mb-3">
+  <label for="cities" class="form-label from-select-lg" >Cities</label>
+  <select class="form-select" size="2" multiple>
+    <option value="41" >Kocaeli</option>
+    <option value="34" selected>İstanbul</option>
+    <option value="06">Ankara</option>
+    <option value="58">Sivas</option>
+    <option value="55">Samsun</option>
+  </select>
+</div>
+
+
+
+
    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
