--- a/10CheckboxVeRadioButton.html
+++ b/10CheckboxVeRadioButton.html
@@ -1,11 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap Buttons</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        /* X-Small Devices (xs) */
+        body {
+            padding: 70px;
+        }
+    </style>
+  </head>
+  <body>
+
+    <div class="form-check">
+        <input type="checkbox" name="" id="ch1" class="form-check-input">
+        <label for="ch1" class="form-check-label">Default Checkbox</label>
+    </div>
+
+    <div class="form-check">
+        <input type="checkbox" name="" id="ch2" class="form-check-input" checked>
+        <label for="ch2" class="form-check-label">Default Checkbox</label>
+    </div>
+
+    <div class="form-check">
+        <input type="checkbox" name="" id="ch3" class="form-check-input" checked disabled>
+        <label for="ch3" class="form-check-label">Default Checkbox</label>
+    </div>
+
+    <br><br>
+
+    <div class="form-check">
+        <input type="radio" name="rd" id="rd1" class="form-check-input">
+        <label for="rd1" class="form-check-label">Default Radio</label>
+    </div>
+
+    <div class="form-check">
+        <input type="radio" name="rd" id="rd2" class="form-check-input" checked>
+        <label for="rd2" class="form-check-label">Default Radio</label>
+    </div>
+
+    <div class="form-check">
+        <input type="radio" name="rd2" id="rd3" class="form-check-input" disabled>
+        <label for="rd3" class="form-check-label">Default Radio</label>
+    </div>
+
+    <div class="form-check">
+        <input type="radio" name="rd2" id="rd4" class="form-check-input" checked disabled>
+        <label for="rd4" class="form-check-label">Default Radio</label>
+    </div>
     
-</body>
+    <br><br>
+
+    <div class="form-check form-switch">
+        <input type="checkbox" name="" id="sw1" class="form-check-input">
+        <label for="sw1" class="form-check-label">Switch Checkbox</label>
+    </div>
+
+    <div class="form-check form-switch">
+        <input type="checkbox" name="" id="sw2" class="form-check-input" checked>
+        <label for="sw2" class="form-check-label">Default Checkbox</label>
+    </div>
+
+    <br><br>
+
+    <div class="form-check form-check-inline">
+        <input type="checkbox" name="inline" id="ch4" class="form-check-input">
+        <label for="ch4" class="form-check-label">Switch Checkbox</label>
+    </div>
+
+    <div class="form-check form-check-inline">
+        <input type="checkbox" name="inline" id="ch5" class="form-check-input" checked>
+        <label for="ch5" class="form-check-label">Default Checkbox</label>
+    </div>
+    
+    <br><br>
+
+    <p>
+        <input type="checkbox" name="btn-check" id="btn-check1" class="btn-check" autocomplete="off">
+        <label for="btn-check1" class="btn btn-primary">Signle Toggle</label>
+    </p>
+
+    <p>
+        <input type="checkbox" name="btn-check" id="btn-check2" class="btn-check" autocomplete="off">
+        <label for="btn-check2" class="btn btn-outline-primary">Signle Toggle</label>
+    </p>
+
+    <p>
+        <div class="btn-group">
+            <input type="radio" name="options" id="option1" class="btn-check" autocomplete="off" checked>
+            <label for="option1" class="btn btn-danger">Checked</label>
+
+            <input type="radio" name="options" id="option2" class="btn-check" autocomplete="off">
+            <label for="option2" class="btn btn-danger">Radio</label>
+
+            <input type="radio" name="options" id="option3" class="btn-check" autocomplete="off">
+            <label for="option3" class="btn btn-danger">Radio</label>
+        </div>
+    </p>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
